@@ -32,4 +32,4 @@
  * @author GoldenKevin
  */
 
-//TODO: get GMS like conversation
+//TODO: GMS-like conversation
